# mayfly

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.config/: nextest.toml
.github/workflows/: ci.yml  docs.yml
crates/daemon/: Cargo.toml  README.md
crates/daemon/src/: a2a.rs  config.rs  grpc.rs  http.rs  ipc.rs  lib.rs  pal.rs  signal.rs
crates/daemon/tests/: daemon.rs  features.rs  http.rs  logging.rs  signal.rs
crates/docsbookgen/src/: lib.rs  main.rs
crates/docsbookgen/tests/: tool_name.rs
crates/metrics/src/: lib.rs
crates/metrics/tests/: placeholder.rs
crates/scheduler/: Cargo.toml  README.md
crates/scheduler/src/: io.rs  lib.rs  ready_queue.rs  scheduler.rs  task.rs
crates/scheduler/tests/: cancel.rs  done_order.rs  integration.rs  io_wait.rs  join.rs  join_prompt.rs  join_timeout.rs  mpmc_spike.rs  panic_isolation.rs  priority.rs  ready_queue.rs  scheduler.rs  sleep.rs  sleep_virtual.rs  syscall_yield.rs  wait_map.rs  yield.rs  yield_syscall.rs
crates/wal/src/: lib.rs
crates/wal/tests/: placeholder.rs
docs/decks/tech_roadshow/: deck.md  raw_slides.md
docs/mdbook/: book.toml
docs/mdbook/book/: 404.html  (+2 more)
docsbook/: index.html
docsbook/style/: mayfly.css
mdbook-theme/: README.md
tasks/daemon/: task_extension.md  tasks.md
tasks/docsbookgen/: tasks.md
tasks/maintenance/: tasks.md
tasks/schedule/: backpressure_hook.md  cpu_budget.md  dependency_graphs.md  graceful_shutdown.md  sharded_api.md  system_tasks.md  task_state_expansion.md  tasks.md  telemetry_hooks.md  tmp.md  tmp2.md  tmp3.md
(+158 files in other folders)
