[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
signal-hook = { version = "0.3", features = ["iterator"] }
crossbeam = "0.8"
notify = "6"
tokio = { version = "1", features = ["rt", "sync", "net"] }
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
scheduler = { path = "../scheduler" }
lazy_static = "1"
clap = { version = "4", features = ["derive"] }

[features]
default = []
ipc = []
grpc = []
a2a = []

[dev-dependencies]
tempfile = "3"
serial_test = "2"
reqwest = { version = "0.11", features = ["blocking"] }
assert_cmd = "2"
nix = { version = "0.30", features = ["signal", "process"] }

[[bin]]
name = "tinkerbell"
path = "bin/tinkerbell.rs"
